--- a/03_CSS/DAY_05/Personal_Portfolio/style.css
+++ b/03_CSS/DAY_05/Personal_Portfolio/style.css
@@ -183,7 +183,7 @@ text-align: center;
    
     nav{
         position: sticky;
-        width: ;
+        width:100% ;
     }
     header{
         top: 0px;
