--- a/TASK/Travel Site/style.css
+++ b/TASK/Travel Site/style.css
@@ -2,19 +2,77 @@
     font-family: "League Spartan", sans-serif;
     padding: 0px;
     margin: 0px;
-    background-color: rgb(245, 245, 247);
 }
 nav{
-    margin-left: 80px;
-    margin-right: 80px;
-    margin-top: 10px;
+    position: fixed;
+    top:0px;
+    z-index: +1;
+    mix-blend-mode:darken; 
+
 }
 .logo{
     align-items: center;
+    margin-left: 80px;
+    z-index: +1;
 }
 .logo h3{
     font-family: "Satisfy", cursive;
     font-weight: 500;
-    padding-top: 12px;
     margin-left: 6px;
+
+}
+.nav{
+    width: 100%;
+    align-items: center;
+    
+}
+.hero
+{
+    background-image: url('https://images.unsplash.com/photo-1545569341-9eb8b30979d9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-size: cover;
+    opacity: 100%;
+    height: 800px;
+    background-attachment: fixed;
+    object-fit: fill;
+    background-position: center;
+}
+.list a{
+    text-decoration: none;
+    color: black;
+    margin-left: 40px;
+    font-size: 18px;
+    font-weight: 600;
+}
+.menu
+{
+    margin-right: 40px;
+}
+.leftnav{
+    margin-right: 80px;
+}
+.body{
+    height: 300px;
+}
+.hero h1{
+    position: absolute;
+    top:25%;
+    left: 80px;
+    font-weight: 900;
+    font-size: 68px;
+    mix-blend-mode:darken;
+}
+.hero h3{
+    position: absolute;
+    top:40%;
+    left: 80px;
+    font-weight: 900;
+    mix-blend-mode:multiply;
+}
+.hero h4{
+    position: absolute;
+    top:50%;
+    left: 80px;
+    font-weight: 700;
+    mix-blend-mode:difference;
+    color: white;
 }
