--- a/TASK/Travel Site/style.css
+++ b/TASK/Travel Site/style.css
@@ -8,6 +8,7 @@ nav{
     top:0px;
     z-index: +1;
     mix-blend-mode:darken; 
+    backdrop-filter: blur(4px);
 
 }
 .logo{
@@ -17,7 +18,7 @@ nav{
 }
 .logo h3{
     font-family: "Satisfy", cursive;
-    font-weight: 500;
+    font-weight: 600;
     margin-left: 6px;
 
 }
@@ -28,20 +29,24 @@ nav{
 }
 .hero
 {
-    background-image: url('https://images.unsplash.com/photo-1545569341-9eb8b30979d9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-image: url('https://images.unsplash.com/photo-1530841377377-3ff06c0ca713?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-size: cover;
     opacity: 100%;
-    height: 800px;
+    height: 860px;
     background-attachment: fixed;
     object-fit: fill;
     background-position: center;
+    
 }
 .list a{
     text-decoration: none;
     color: black;
     margin-left: 40px;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 700;
+}
+.list a:hover{
+    color: rgb(0, 112, 163);
 }
 .menu
 {
@@ -50,29 +55,92 @@ nav{
 .leftnav{
     margin-right: 80px;
 }
-.body{
-    height: 300px;
-}
 .hero h1{
     position: absolute;
-    top:25%;
     left: 80px;
-    font-weight: 900;
-    font-size: 68px;
-    mix-blend-mode:darken;
-}
-.hero h3{
-    position: absolute;
-    top:40%;
-    left: 80px;
-    font-weight: 900;
-    mix-blend-mode:multiply;
-}
-.hero h4{
-    position: absolute;
-    top:50%;
-    left: 80px;
+    top: 35%;
+    font-size: 48px;
     font-weight: 700;
-    mix-blend-mode:difference;
+    
+}
+.hero p{
+    color:rgb(0, 0, 0);
+    width: 700px;
+    position: absolute;
+    top: 45%;
+    left: 80px;
+    font-size: 20px;
+    font-weight: 600;
+    mix-blend-mode:hard-light;
+}
+.hero button{
+    position: absolute;
+    left: 80px;
+    width: 400px;
+    padding: 16px;
+    top: 55%;
+    background: transparent;
+    border: 2px solid;
+    font-size: 20px;
+    font-weight: 700;
+}
+.hero button:hover{
+    background: rgb(0, 112, 163);
     color: white;
+    border: none;
+}
+.dest h4{
+    margin-top: 60px;
+    align-items: center;
+    font-weight: 800;
+}
+.rows{
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-top: 60px;
+    padding-bottom: 60px;
+    border-bottom: 2px solid rgba(86, 86, 86, 0.377);
+}
+.location{
+    align-items: center;
+    text-align: center;
+}
+.location img{
+    mix-blend-mode: darken;
+    box-shadow: 0px 1px 20px rgba(1, 1, 1, 0.281);
+}
+.location h5{
+    width: 100%;
+    margin-top: 12px;
+    font-weight: 700;
+}
+.discover h1{
+    font-size: 48px;
+    font-weight: 900;
+}
+.discover p{
+    font-size: 20px;
+    width: 400px;
+}
+.destin{
+    margin-top: 120px;
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 120px;
+}
+.discover button{
+    padding: 16px;
+    background: transparent;
+    border: 2px solid;
+    font-size: 20px;
+    font-weight: 700;
+    align-items: center;
+}
+.discover button:hover{
+    background: rgb(0, 112, 163);
+    color: white;
+    border: none;
+}
+.discover{
+    margin-left: 180px;
 }
