--- a/TASK/Travel Site/style.css
+++ b/TASK/Travel Site/style.css
@@ -106,7 +106,7 @@ nav{
     text-align: center;
 }
 .location img{
-    mix-blend-mode: darken;
+    filter: contrast(120%);
     box-shadow: 0px 1px 20px rgba(1, 1, 1, 0.281);
 }
 .location h5{
@@ -235,7 +235,7 @@ nav{
     width: fit-content;
     padding: 60px 40px;
     position: relative;
-    top: -220px;
+    top: -100px;
     left: 850px;
     border-radius: 30px;
 }
@@ -244,6 +244,45 @@ nav{
 }
 .art p{
     width: 400px;
+}
+.spots{
+    margin-left: 80px;
+    margin-right: 80px;
+    margin-bottom: 80px;
+}
+.spots h4{
+    margin-top: 60px;
+    align-items: center;
+    font-weight: 800;
+}
+.row1{
+    margin-top: 40px;
+}
+.dest1{
+    position: relative;
+}
+.pname{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+
+        color: transparent; /* Text color */
+        padding-top: 121px;
+        padding-bottom: 123px;
+}
+.pname:hover{
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white; 
+    filter: contrast(110%);
+
+
+}
+.pname h2{
+    z-index: +1;
+    font-weight: 900;
+    width: 500px;
 }
 .foot{
     padding: 80px;
