--- a/03_CSS/DAY_04/Book_Gallery/Style.css
+++ b/03_CSS/DAY_04/Book_Gallery/Style.css
@@ -22,7 +22,7 @@ header h1:hover{
     color: rgb(38, 38, 38);
 }
 #img{
-    background-image: url('https://images.unsplash.com/photo-1533669955142-6a73332af4db?q=80&w=1948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-image: url('https://cdn.pixabay.com/photo/2016/02/16/21/07/books-1204029_1280.jpg');
     background-attachment: fixed;
     width : 100%;
     height : 600px;
@@ -77,18 +77,25 @@ button{
 
 .row1{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
-.col2{
-    color: aliceblue;
+.addr{
+    color: rgb(0, 0, 0);
     align-items: center;
-    padding-top: 60px;
-    margin-right: 600px;
+    margin: 20px;
+    padding: 20px;
+    margin-right: 60px;
 }
-.col1{
-    width: 10%;
+.addr h1{
+    font-weight: 800;
+}
+.addr h3{
+    font-weight: 800;
+}
+.map{
+    margin: 20px;
     justify-content: start;
 }
 footer{
-    background-color: rgb(94, 29, 29);
+    background-color: rgba(167, 59, 59, 0.951);
 }
